Fixes and Updates:
	- Changed most of the recommended talents for leveling.