@@ -134,9 +134,14 @@
 					<Anchor point="TOPLEFT" x="221" y="-175" />
 				</Anchors>
 			</CheckButton>
-			<CheckButton name="HMPPartyPlayCB" inherits="UICheckButtonTemplate" text="CheckButton1">
+			<CheckButton name="HMPWaypointsCB" inherits="UICheckButtonTemplate" text="CheckButton1">
 				<Anchors>
 					<Anchor point="TOPLEFT" x="39" y="-175" />
+				</Anchors>
+			</CheckButton>
+			<CheckButton name="HMPPartyPlayCB" inherits="UICheckButtonTemplate" text="CheckButton1">
+				<Anchors>
+					<Anchor point="TOPLEFT" x="39" y="-213" />
 				</Anchors>
 			</CheckButton>
 			<CheckButton name="HMPPartyPlayAnnounceCB" inherits="UICheckButtonTemplate" text="CheckButton1">
@@ -321,6 +326,14 @@
 					<Size x="99" y="20" />
 					<Anchors>
 						<Anchor point="LEFT" relativeTo="HMPQueuesCB" relativePoint="LEFT" x="7" />
+					</Anchors>
+					<FontHeight val="12" />
+					<Color r="1" g="1" b="1" />
+				</FontString>
+				<FontString name="HMPWaypointsText" inherits="GameFontNormal" text="Waypoints" justifyH="CENTER" justifyV="CENTER">
+					<Size x="99" y="20" />
+					<Anchors>
+						<Anchor point="LEFT" relativeTo="HMPWaypointsCB" relativePoint="LEFT" x="10" />
 					</Anchors>
 					<FontHeight val="12" />
 					<Color r="1" g="1" b="1" />
